--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "activityBarBadge.foreground": "#262626",
         "statusBar.background": "#262626",
         "statusBar.foreground": "#e9dbb7"
-    }
+    },
+    "cmake.sourceDirectory": "/home/d.karpachev/cpp_projects/task2"
 }
