--- a/task6/CMakeLists.txt
+++ b/task6/CMakeLists.txt
@@ -1,14 +1,15 @@
 cmake_minimum_required(VERSION 3.10)
-project(Task3 LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_COMPILER "pgc++ -acc=gpu -Minfo=all")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lboost_program_options -O2")
+project(Task6 LANGUAGES CXX)
+
+add_definitions(-D_GLIBCXX_USE_CXX11_ABI=1)
 
 set(OUTPUT_DIR ${CMAKE_BINARY_DIR}/bin)
 file(MAKE_DIRECTORY ${OUTPUT_DIR})
 
-find_package(Threads REQUIRED)
+find_package(Boost REQUIRED COMPONENTS program_options)
 
 file(GLOB SOURCES "src/*.cpp")
 
@@ -16,6 +17,8 @@ foreach(SRC ${SOURCES})
     get_filename_component(EXE_NAME ${SRC} NAME_WE)
     add_executable(${EXE_NAME} ${SRC})
     set_target_properties(${EXE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})
-    target_compile_features(${EXE_NAME} PRIVATE cxx_std_20)
-    target_link_libraries(${EXE_NAME} PRIVATE Threads::Threads)
+    target_compile_options(${EXE_NAME} PRIVATE -O2) # -acc -Minfo=all
+    target_link_libraries(${EXE_NAME} PRIVATE Boost::program_options)
 endforeach()
+
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
